# ProjectAlly

./: .gitignore  CLAUDE-FORK.md  CLAUDE.md  README.md  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml  desktop-build.yml
apps/desktop/: .env.local.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  SignIn.tsx  Tracker.tsx  supabase.ts  updater.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  screenshot.rs  session.rs  tracker.rs  tray.rs
apps/web/: .env.local.example  middleware.ts  proxy.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(auth)/sign-in/: page.tsx
apps/web/app/(auth)/sign-up/: page.tsx
apps/web/app/app/: EmployeeAppClient.tsx  page.tsx
apps/web/app/auth/callback/: route.ts
apps/web/app/auth/onboarding/: page.tsx
apps/web/app/dashboard/: DashboardClient.tsx  page.tsx
apps/web/app/dashboard/_components/: DateRangeControls.tsx  useDashboardRealtime.ts
apps/web/app/dashboard/members/[id]/: MemberDetailClient.tsx  page.tsx
apps/web/app/dashboard/team/: TeamClient.tsx  page.tsx
apps/web/app/download/: DownloadButtons.tsx  page.tsx
apps/web/app/invite/[token]/: AcceptInviteButton.tsx  page.tsx
apps/web/components/ui/: Avatar.tsx  FakeScreen.tsx  ProfileMenu.tsx
apps/web/lib/actions/: screenshots.ts  sessions.ts
apps/web/lib/auth/: actions.ts  redirect.ts
apps/web/lib/data/: dashboard.ts  releases.ts
apps/web/lib/email/: resend.ts
apps/web/lib/email/templates/: invite.ts
apps/web/lib/types/: database.ts
supabase/migrations/: 001_initial_schema.sql  002_auth_trigger.sql  003_invites_and_security.sql  004_session_paused_seconds.sql
