[package]
name = "ally-tracker-desktop"
version = "0.1.0"
description = "AllyTracker Desktop Agent"
authors = ["Vishnu Prasath"]
edition = "2021"

[lib]
name = "ally_tracker_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ally-tracker-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-default"] }
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
screenshots = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "s"
strip = true
